tests/neg/checkNoConflict/A2.scala
package foo
class A // error: class A in package foo has already been compiled once during this run
